[package]
name = "sint"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-timers = { version = "0.3", default-features = false, features = [
    "futures",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", default-features = false, features = ["time"] }

[dependencies]
pin-project = "1.1.5"
